# aquasol

./: .gitignore  CONTRIBUTING.md  README.md  documentation.py  setup.cfg  setup.py
aquasol/: __init__.py  __main__.py  check.py  constants.py  format.py  general.py  humidity.py  properties.py  sources.py
aquasol/formulas/: general.py
aquasol/formulas/solutions/: clegg.py  ionic.py  steiger.py
aquasol/formulas/solutions/activity_coefficient/: KCl.py  Na2SO4.py  NaCl.py  steiger.py
aquasol/formulas/solutions/data/: Coeffs_Steiger2008_Activity.json  Coeffs_Steiger2008_Solubility.json
aquasol/formulas/solutions/density/: CaCl2.py  KCl.py  KI.py  LiCl.py  Na2SO4.py  NaCl.py  __init__.py  al_ghafri.py  clegg.py  krumgalz.py  misc.py
aquasol/formulas/solutions/electrical_conductivity/: NaCl.py
aquasol/formulas/solutions/refractive_index/: CaCl2.py
aquasol/formulas/water/: density_atm.py  density_sat.py  diffusivity_in_air.py  surface_tension.py  vapor_pressure.py  viscosity_atm.py
aquasol/solutions/: __init__.py  convert.py  extend.py  general.py  invert.py  pitzer.py  properties.py
aquasol/solutions/formulas/: basic_conversions.py  pitzer.py  steiger.py
aquasol/solutions/formulas/density/: KCl.py  (+8 more)
aquasol/water/: __init__.py  convert.py  extend.py  general.py  invert.py  properties.py
aquasol/water/formulas/: density_atm.py  density_sat.py  diffusivity_in_air.py  surface_tension.py  vapor_pressure.py  viscosity_atm.py
documentation/: plots.py
tests/: test_solutions.py  test_water.py
thermov/: Psat.py  SaltsSolutionData.m  __init__.py  __main__.py  activity.py  activity_density.py  check.py  checks.py  constants.py  conversions.py  density.py  format.py  ions.py  surface_tension.py  tools.py  vapor_pressure.py
thermov/solutions/: __init__.py  activity.py  activity_nacl.py  conversions.py  conversions_basic.py  conversions_fancy.py  convert.py  density.py  density_basic.py  density_nacl.py  general.py  properties.py  surface_tension.py  surface_tension_cacl2.py  surface_tension_licl.py  surface_tension_misc.py  surface_tension_nacl.py
thermov/solutions/activity_formulas/: nacl.py
thermov/solutions/formulas/: basic_conversions.py
thermov/solutions/surface_tension_formulas/: cacl2.py  misc.py  nacl.py
thermov/water/: __init__.py  general.py  properties.py  surface_tension.py  vapor_pressure.py
thermov/water/formulas/: density_atm.py  density_sat.py  psat.py  surface_tension.py
(+64 files in other folders)
