[metadata]
name = aquasol
version = 1.0.3
description = Thermodynamic relations for water and solutions
long_description = file: README.md, LICENSE
keywords = water, solutions, thermodynamic, properties, relations
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    pynverse
    numpy
python_requires =
    >=3.6
