[metadata]
name = aquasol
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://cameleon.univ-lyon1.fr/ovincent/aquasol
description = Thermodynamic relations for water and solutions
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = water, solutions, thermodynamic, properties, relations, convert
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    pynverse
    numpy
    importlib-metadata
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
